force-app/main/default/objects/L_PR_Course_Parent_Agreement_Relation__c/L_PR_Course_Parent_Agreement_Relation__c.object-meta.xml
<CustomObject>
    <label>Course/Agreement Relationship</label>
    <nameField>
        <displayFormat>CPA-{00000}</displayFormat>
        <label>Course/Agreement Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course/Agreement Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>