force-app/main/default/objects/L_PR_Course_Parent_Agreement_Relation__c/fields/L_PR_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Agreement_Name__c</fullName>
    <label>Agreement Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select Partnership Agreement</errorMessage>
        <filterItems>
            <field>Contract__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partnership Agreement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Course_Parent_Agreement_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>