force-app/main/default/objects/L_PR_Course_Parent_Agreement_Relation__c/fields/L_PR_Course_Instance__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Course_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Instance</label>
    <referenceTo>CourseInstance__c</referenceTo>
    <relationshipName>Course_Parent_Agreement_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>