force-app/main/default/objects/L_PR_Course_Parent_Agreement_Relation__c/fields/L_PR_Course_Instance_Code__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Course_Instance_Code__c</fullName>
    <formula>L_PR_Course_Instance__r.L_AD_Course_Instance_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Instance Code</label>
    <type>Text</type>
</CustomField>