force-app/main/default/objects/L_PR_Course_Parent_Agreement_Relation__c/fields/L_PR_Course_Parent__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Course_Parent__c</fullName>
    <label>Course Parent Id</label>
    <referenceTo>CourseParent__c</referenceTo>
    <relationshipName>Course_Parent_Agreement_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>